add different views depending on the role

--- a/public/home/operatorManager.ejs
+++ b/public/home/operatorManager.ejs
@@ -3,11 +3,11 @@
 
 <head>
     <title>Home</title>
-    <%- include('layout/header.ejs') %>
+    <%- include('../layout/header.ejs') %>
 </head>
 
 <body>
-<%- include('layout/nav.ejs') %>
+<%- include('../layout/nav.ejs') %>
 
 <div class="row w-100">
     <div class="col-md-2 bg-gray">
@@ -133,7 +133,7 @@
         </div>
     </div>
 </div>
-<%- include('layout/footer.ejs') %>
+<%- include('../layout/footer.ejs') %>
 </body>
 
 </html>
