solve bad link in RGPD href

--- a/public/layout/footer.ejs
+++ b/public/layout/footer.ejs
@@ -18,10 +18,10 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <a href="/RGPD">RGPD</a>
+                            <a href="/">RGPD</a>
                         </li>
                         <li>
-                            <a href="#!">Mentions légales</a>
+                            <a href="/law/legal-notice">Mentions légales</a>
                         </li>
 
                     </ul>
