--- a/public/ticket/CRUD/create.ejs
+++ b/public/ticket/CRUD/create.ejs
@@ -15,7 +15,7 @@
             <h1>Nouveau ticket d'incident</h1>
             <p>Entrez votre problème et l'assistance fera son possible pour le régler</p>
         </div>
-
+        <script>console.log(Object.keys(<% errors %>))</script>
         <% if (Object.keys(errors).length > 0) { %>
         <div class="alert alert-danger" role="alert">
             <h5>Erreur(s) :</h5>
