add title on connection page

--- a/public/auth/login.ejs
+++ b/public/auth/login.ejs
@@ -10,6 +10,9 @@
     <%- include('../layout/nav.ejs') %>
 
     <div class="container my-5">
+        <h2 class="text-center mb-5">
+            Se connecter
+        </h2>
         <form action="" method="POST" class="col-md-6 offset-md-3">
             <div class="form-group">
                 <label for="email">Email</label>
